--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
+    overflow-x: hidden;
     scroll-behavior: smooth;
 }
 
@@ -148,8 +149,7 @@ h4 {
 }
 
 .main {
-    width: 1130px;
-    max-width: 95%;
+    width: 100%;
     padding: 120px 0px 100px 0px;
     margin: 0 auto;
     display: flex;
