--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
     overflow-x: hidden;
-    scroll-behavior: smooth;
 }
 
 .hero {
@@ -13,7 +12,7 @@
     background-image: url(sreeguru.jpg);
     background-size: cover;
     background-position: center;
-
+    scroll-behavior: smooth;
 }
 
 nav {
@@ -23,6 +22,8 @@ nav {
     padding-top: 45px;
     padding-left: 8%;
     padding-right: 8%;
+    padding-bottom: 45px;
+    
 }
 
 .logo {
@@ -74,11 +75,10 @@ nav ul li a:hover {
 .logbtn:hover {
     transform: scale(1.2);
     background-color: transparent;
-    border: 2px solid;
+    border: 2px solid yellow;
     transition: .4s;
     color: blue;
 }
-
 .content {
     position: absolute;
     top: 50%;
@@ -202,7 +202,7 @@ h4 {
 
 .card {
     width: 400px;
-    height: 380px;
+    height: 100%;
     padding: 20px 35px;
     background: #191919;
     border-radius: 20px;
@@ -226,10 +226,11 @@ h4 {
     margin-bottom: 15px;
 }
 
-.pra p {
+.card .pra p {
     color: rgb(78, 109, 162);
     font-size: 16px;
     line-height: 27px;
+    padding: 13px 25px;
     margin-bottom: 25px;
 }
 
@@ -240,6 +241,7 @@ h4 {
     border: 2px solid transparent;
     font-weight: bold;
     padding: 9px 22px;
+    overflow-x: hidden;
     border-radius: 30px;
     transition: 0.4s;
 }
